# pyo3_bazel_example

./: .gitignore  LICENSE  MODULE.bazel  README.md
examples/classes/: BUILD  RustClasses.py  main.py
examples/classes/src/: lib.rs  person.rs
examples/hello_world/: BUILD  RustModule.py  lib.rs  main.py
examples/multithreading/: BUILD  README.md  benchmark.py  main.py
examples/multithreading/src/: benchmark.rs  lib.rs  progress.rs  result.rs
extensions/: BUILD  module_importer.py  pyo3_rules.bzl
python_lib/: BUILD  RustModule.pyi  importer.py  main.py
rust_lib/: BUILD  Cargo.toml
rust_lib/src/: lib.rs  main.rs
