module(
    name = "rust_pyo3",
    version = "1.0",
)

# Python
bazel_dep(name = "rules_python", version = "1.4.1")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)

# Rust
bazel_dep(name = "rules_rust", version = "0.61.0")
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(package = "pyo3", version = "0.25.0", features = ["extension-module", "abi3", "abi3-py311"])
crate.spec(package = "log", version = "0.4.27")
crate.spec(package = "pyo3-log", version = "0.12.4")
crate.from_specs()
use_repo(crate, "crates")

# Skylib for copy_file rule
bazel_dep(name = "bazel_skylib", version = "1.5.0")

