[package]
name = "rust_lib"
default-run = "main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "rust_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3", "abi3-py311"] }
pyo3-log = "0.12.4"
